# XPlatform-MiniLib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  XPF.sln  readme.md
XPF/: CMakeLists.txt  Source.cpp  XPF.cpp  XPF.h  XPF.vcxproj  XPF.vcxproj.filters
XPF-Tests/: CMakeLists.txt  XPF-Test.vcxproj  XPF-Test.vcxproj.filters  XPF-Tests.cpp  XPF-Tests.h  prebuild.bat
XPF-Tests/gtest_libs/: info.txt
XPF-Tests/test_headers/: TestDummyStruct.hpp  TestMemoryLeak.hpp
XPF-Tests/test_sources/TestPlatformAPI/: TestAtomicApi.cpp  TestDefaultAllocator.cpp  TestMemoryApi.cpp  TestSafeArithmetic.cpp  TestStringApi.cpp
XPF-Tests/test_sources/TestPlatformSTL/: TestBitSet.cpp  TestList.cpp  TestMap.cpp  TestPair.cpp  TestReadWriteLock.cpp  TestRedBlackTree.cpp  TestSemaphore.cpp  TestSet.cpp  TestSharedPointer.cpp  TestString.cpp  TestThread.cpp  TestThreadPool.cpp  TestUniquePointer.cpp  TestVector.cpp
XPF-Tests/test_sources/TestPlatformUtils/: TestNumericLimits.cpp  TestUtilsApiSet.cpp
XPF/XPlatform/: XPlatformIncludes.hpp
XPF/XPlatform/inc/: XPlatformBitSet.hpp  XPlatformCore.hpp  XPlatformInitializerList.hpp  XPlatformList.hpp  XPlatformLocking.hpp  XPlatformMap.hpp  XPlatformMemoryAllocator.hpp  XPlatformNumericLimits.hpp  XPlatformPair.hpp  XPlatformReadWriteLock.hpp  XPlatformRedBlackTree.hpp  XPlatformSemaphore.hpp  XPlatformSet.hpp  XPlatformSharedPointer.hpp  XPlatformSpecificApi.hpp  XPlatformString.hpp  XPlatformThread.hpp  XPlatformThreadPool.hpp  XPlatformTypeTraits.hpp  XPlatformUniquePointer.hpp  XPlatformUtilsApiSet.hpp  XPlatformVector.hpp
submodule/: init
xpf_lib/: CMakeLists.txt  xpf.hpp  xpf.natvis
xpf_lib/private/Communication/: ClientSocket.cpp  ServerSocket.cpp  http.cpp
xpf_lib/private/Communication/Sockets/: BerkeleySocket.cpp  ClientSocket.cpp  ServerSocket.cpp
xpf_lib/private/Communication/Sockets/win_km/: WskApi.cpp
xpf_lib/private/Containers/: String.cpp  TwoLockQueue.cpp
xpf_lib/private/Filesystem/: FileCommonHelpers.hpp  FileObject.cpp
xpf_lib/private/Locks/: BusyLock.cpp  ReadWriteLock.cpp
xpf_lib/private/Memory/: LookasideListAllocator.cpp  SplitAllocator.cpp
xpf_lib/private/Multithreading/: RundownProtection.cpp  Signal.cpp  Thread.cpp  ThreadPool.cpp
xpf_lib/private/Utility/: EventFramework.cpp  PdbSymbolParser.cpp  PeFileParser.cpp  ProtobufSerializer.cpp
xpf_lib/private/core/: PlatformApi.cpp
xpf_lib/public/Communication/: ClientSocket.hpp  IServerClient.hpp  ServerSocket.hpp  http.hpp
xpf_lib/public/Communication/Sockets/: BerkeleySocket.hpp  ClientSocket.hpp  ServerSocket.hpp
xpf_lib/public/Communication/Sockets/win_km/: WskApi.hpp
xpf_lib/public/Containers/: AtomicList.hpp  RedBlackTree.hpp  Span.hpp  Stream.hpp  String.hpp  TwoLockQueue.hpp  Vector.hpp
xpf_lib/public/Filesystem/: FileObject.hpp
xpf_lib/public/Locks/: BusyLock.hpp  Lock.hpp  ReadWriteLock.hpp
xpf_lib/public/Memory/: CompressedPair.hpp  LookasideListAllocator.hpp  MemoryAllocator.hpp  Optional.hpp  SharedPointer.hpp  SplitAllocator.hpp  UniquePointer.hpp
xpf_lib/public/Multithreading/: RundownProtection.hpp  Signal.hpp  Thread.hpp  ThreadPool.hpp
xpf_lib/public/Utility/: EventFramework.hpp  ISerializable.hpp  PdbSymbolParser.hpp  PeFileParser.hpp  ProtobufSerializer.hpp
xpf_lib/public/core/: Algorithm.hpp  Core.hpp  Endianess.hpp  PlatformApi.hpp  TypeTraits.hpp
xpf_lib/public/core/platform_specific/: CrossPlatformNtApi.hpp  CrossPlatformSal.hpp  CrossPlatformStatus.hpp
xpf_lib/win_km_build/: readme.md  xpf_lib_winkm.vcxproj
xpf_tests/: CMakeLists.txt  XPF-TestIncludes.hpp  XPF-Tests.cpp
xpf_tests/Framework/: XPF-TestFramework.cpp  XPF-TestFramework.hpp
xpf_tests/Mocks/: TestMockEvents.hpp  TestMocks.hpp
xpf_tests/tests/: TestNatvisValidation.cpp
xpf_tests/tests/Communication/: TestHttp.cpp  TestSocketClientServer.cpp
xpf_tests/tests/Containers/: TestAtomicList.cpp  TestRedBlackTree.cpp  TestSpan.cpp  TestStream.cpp  TestString.cpp  TestTwoLockQueue.cpp  TestVector.cpp
xpf_tests/tests/Filesystem/: TestFileObject.cpp
xpf_tests/tests/Locks/: TestBusyLock.cpp  TestReadWriteLock.cpp
xpf_tests/tests/Memory/: TestCompressedPair.cpp  TestLookasideListAllocator.cpp  TestMemoryAllocator.cpp  TestOptional.cpp  TestSharedPointer.cpp  TestUniquePointer.cpp
xpf_tests/tests/Multithreading/: TestRundownProtection.cpp  TestSignal.cpp  TestThread.cpp  TestThreadPool.cpp
xpf_tests/tests/Utility/: TestEventFramework.cpp  TestPdbSymbolParser.cpp  TestPeFileParser.cpp  TestProtobufSerializer.cpp
xpf_tests/tests/core/: TestAlgorithm.cpp  TestCore.cpp  TestEndianess.cpp  TestPlatformApi.cpp
xpf_tests/win_km_build/: readme.md  readme.txt  xpf_tests_winkm.cpp  xpf_tests_winkm.inf  xpf_tests_winkm.vcxproj
xpf_tests/win_km_build/CppSupport/: CppSupport.cpp  CppSupport.hpp
